--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "desp.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon desp.js"
+    "start": "node ./build/index.js",
+    "build": "tsc -p .",
+    "dev": "nodemon ./src/index.ts",
+    "start2": "nodemon desp.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^12.20.15",
     "node-fetch": "^2.6.1",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5",
     "web3": "^1.4.0"
   },
   "devDependencies": {
